# baitbox

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
baitbox/: anomaly.py  async_bridge.py  config.py  db.py  db_postgres.py  db_sqlite.py  geoip.py  main.py  pubsub.py  ratelimit.py  sessions.py  vfs.py  webhooks.py
baitbox/servers/: __init__.py  http_server.py  ssh_server.py  telnet_server.py
baitbox/static/: index.html  login.html
tests/: test_anomaly.py  test_auth.py  test_db.py  test_export.py  test_geoip.py  test_health.py  test_http_server.py  test_pubsub.py  test_ratelimit.py  test_ssh_server.py  test_telnet.py  test_vfs.py  test_webhooks.py
