[project]
name = "baitbox"
version = "2.1.0"
description = "Zero-config multi-protocol honeypot with real-time dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["honeypot", "security", "ssh", "dashboard"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::cryptography.utils.CryptographyDeprecationWarning",
]
